MxAntlr/MxParser.cpp

// Generated from MxParser.g4 by ANTLR 4.13.0


#include "MxParserVisitor.h"

#include "MxParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MxParserStaticData final {
  MxParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MxParserStaticData(const MxParserStaticData&) = delete;
  MxParserStaticData(MxParserStaticData&&) = delete;
  MxParserStaticData& operator=(const MxParserStaticData&) = delete;
  MxParserStaticData& operator=(MxParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mxparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
MxParserStaticData *mxparserParserStaticData = nullptr;

void mxparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mxparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(mxparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MxParserStaticData>(
    std::vector<std::string>{
      "program", "declaration", "functionDeclaration", "functionDeclList", 
      "functionDeclPair", "functionCallList", "classDeclaration", "classComponents", 
      "constructorDeclaration", "statement", "variableDeclaration", "initDeclarator", 
      "expresionStatement", "branchStatement", "loopStatement", "controlFlowStatement", 
      "returnStatement", "breakStatement", "continueStatement", "suiteStatement", 
      "emptyStatement", "logicalLiteral", "literalExpression", "typename", 
      "newTypename", "newArrayExpr", "newArrayEmpty", "identifier", "expression", 
      "newExpression", "builtInTypename"
    },
    std::vector<std::string>{
      "", "", "", "", "", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", 
      "'>='", "'<='", "'!='", "'=='", "'&&'", "'||'", "'!'", "'>>'", "'<<'", 
      "'&'", "'|'", "'^'", "'~'", "'='", "'++'", "'--'", "'.'", "'('", "')'", 
      "'['", "']'", "'{'", "'}'", "';'", "','", "'\\u003F'", "':'", "'void'", 
      "'bool'", "'int'", "'string'", "'new'", "'class'", "'null'", "'true'", 
      "'false'", "'this'", "'if'", "'else'", "'for'", "'while'", "'break'", 
      "'continue'", "'return'"
    },
    std::vector<std::string>{
      "", "Whitespace", "Newline", "BlockComment", "LineComment", "OpAdd", 
      "OPSub", "OPMul", "OpDiv", "OpMod", "Greater", "Less", "GreaterEqual", 
      "LessEqual", "NotEqual", "Equal", "LogicAnd", "LogicOr", "LogicNot", 
      "RightShift", "LeftShift", "BitAnd", "BitOr", "BitXor", "BitNegation", 
      "OpAssign", "OpIncrement", "OpDecrement", "OpMemberAccess", "OpenParen", 
      "CloseParen", "OpenBracket", "CloseBracket", "OpenBrace", "CloseBrace", 
      "SemiColon", "Comma", "QuestionMark", "Colon", "Void", "Bool", "Int", 
      "String", "New", "Class", "Null", "True", "False", "This", "If", "Else", 
      "For", "While", "Break", "Continue", "Return", "Identifier", "StringLiteral", 
      "LogicalLiteral", "IntegerLiteral"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mxparserParserStaticData = staticData.release();
}

}

MxParser::MxParser(TokenStream *input) : MxParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MxParser::MxParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MxParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mxparserParserStaticData->atn, mxparserParserStaticData->decisionToDFA, mxparserParserStaticData->sharedContextCache, options);
}

MxParser::~MxParser() {
  delete _interpreter;
}

const atn::ATN& MxParser::getATN() const {
  return *mxparserParserStaticData->atn;
}

std::string MxParser::getGrammarFileName() const {
  return "MxParser.g4";
}

const std::vector<std::string>& MxParser::getRuleNames() const {
  return mxparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& MxParser::getVocabulary() const {
  return mxparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MxParser::getSerializedATN() const {
  return mxparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

MxParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MxParser::ProgramContext::EOF() {
  return getToken(MxParser::EOF, 0);
}

std::vector<MxParser::DeclarationContext *> MxParser::ProgramContext::declaration() {
  return getRuleContexts<MxParser::DeclarationContext>();
}

MxParser::DeclarationContext* MxParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<MxParser::DeclarationContext>(i);
}


size_t MxParser::ProgramContext::getRuleIndex() const {
  return MxParser::RuleProgram;
}


std::any MxParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ProgramContext* MxParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MxParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 72083432561180672) != 0)) {
      setState(62);
      declaration();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(68);
    match(MxParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

MxParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::VariableDeclarationContext* MxParser::DeclarationContext::variableDeclaration() {
  return getRuleContext<MxParser::VariableDeclarationContext>(0);
}

MxParser::FunctionDeclarationContext* MxParser::DeclarationContext::functionDeclaration() {
  return getRuleContext<MxParser::FunctionDeclarationContext>(0);
}

MxParser::ClassDeclarationContext* MxParser::DeclarationContext::classDeclaration() {
  return getRuleContext<MxParser::ClassDeclarationContext>(0);
}


size_t MxParser::DeclarationContext::getRuleIndex() const {
  return MxParser::RuleDeclaration;
}


std::any MxParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MxParser::DeclarationContext* MxParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, MxParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(70);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(71);
      functionDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(72);
      classDeclaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

MxParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::TypenameContext* MxParser::FunctionDeclarationContext::typename_() {
  return getRuleContext<MxParser::TypenameContext>(0);
}

MxParser::IdentifierContext* MxParser::FunctionDeclarationContext::identifier() {
  return getRuleContext<MxParser::IdentifierContext>(0);
}

tree::TerminalNode* MxParser::FunctionDeclarationContext::OpenParen() {
  return getToken(MxParser::OpenParen, 0);
}

tree::TerminalNode* MxParser::FunctionDeclarationContext::CloseParen() {
  return getToken(MxParser::CloseParen, 0);
}

MxParser::SuiteStatementContext* MxParser::FunctionDeclarationContext::suiteStatement() {
  return getRuleContext<MxParser::SuiteStatementContext>(0);
}

MxParser::FunctionDeclListContext* MxParser::FunctionDeclarationContext::functionDeclList() {
  return getRuleContext<MxParser::FunctionDeclListContext>(0);
}


size_t MxParser::FunctionDeclarationContext::getRuleIndex() const {
  return MxParser::RuleFunctionDeclaration;
}


std::any MxParser::FunctionDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MxParser::FunctionDeclarationContext* MxParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, MxParser::RuleFunctionDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    typename_(0);
    setState(76);
    identifier();
    setState(77);
    match(MxParser::OpenParen);
    setState(79);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 72065840375136256) != 0)) {
      setState(78);
      functionDeclList();
    }
    setState(81);
    match(MxParser::CloseParen);
    setState(82);
    antlrcpp::downCast<FunctionDeclarationContext *>(_localctx)->body = suiteStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclListContext ------------------------------------------------------------------

MxParser::FunctionDeclListContext::FunctionDeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MxParser::FunctionDeclPairContext *> MxParser::FunctionDeclListContext::functionDeclPair() {
  return getRuleContexts<MxParser::FunctionDeclPairContext>();
}

MxParser::FunctionDeclPairContext* MxParser::FunctionDeclListContext::functionDeclPair(size_t i) {
  return getRuleContext<MxParser::FunctionDeclPairContext>(i);
}

std::vector<tree::TerminalNode *> MxParser::FunctionDeclListContext::Comma() {
  return getTokens(MxParser::Comma);
}

tree::TerminalNode* MxParser::FunctionDeclListContext::Comma(size_t i) {
  return getToken(MxParser::Comma, i);
}


size_t MxParser::FunctionDeclListContext::getRuleIndex() const {
  return MxParser::RuleFunctionDeclList;
}


std::any MxParser::FunctionDeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclList(this);
  else
    return visitor->visitChildren(this);
}

MxParser::FunctionDeclListContext* MxParser::functionDeclList() {
  FunctionDeclListContext *_localctx = _tracker.createInstance<FunctionDeclListContext>(_ctx, getState());
  enterRule(_localctx, 6, MxParser::RuleFunctionDeclList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(89);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(84);
        functionDeclPair();
        setState(85);
        match(MxParser::Comma); 
      }
      setState(91);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
    setState(92);
    functionDeclPair();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclPairContext ------------------------------------------------------------------

MxParser::FunctionDeclPairContext::FunctionDeclPairContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::TypenameContext* MxParser::FunctionDeclPairContext::typename_() {
  return getRuleContext<MxParser::TypenameContext>(0);
}

MxParser::IdentifierContext* MxParser::FunctionDeclPairContext::identifier() {
  return getRuleContext<MxParser::IdentifierContext>(0);
}


size_t MxParser::FunctionDeclPairContext::getRuleIndex() const {
  return MxParser::RuleFunctionDeclPair;
}


std::any MxParser::FunctionDeclPairContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclPair(this);
  else
    return visitor->visitChildren(this);
}

MxParser::FunctionDeclPairContext* MxParser::functionDeclPair() {
  FunctionDeclPairContext *_localctx = _tracker.createInstance<FunctionDeclPairContext>(_ctx, getState());
  enterRule(_localctx, 8, MxParser::RuleFunctionDeclPair);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    typename_(0);
    setState(95);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallListContext ------------------------------------------------------------------

MxParser::FunctionCallListContext::FunctionCallListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MxParser::ExpressionContext *> MxParser::FunctionCallListContext::expression() {
  return getRuleContexts<MxParser::ExpressionContext>();
}

MxParser::ExpressionContext* MxParser::FunctionCallListContext::expression(size_t i) {
  return getRuleContext<MxParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> MxParser::FunctionCallListContext::Comma() {
  return getTokens(MxParser::Comma);
}

tree::TerminalNode* MxParser::FunctionCallListContext::Comma(size_t i) {
  return getToken(MxParser::Comma, i);
}


size_t MxParser::FunctionCallListContext::getRuleIndex() const {
  return MxParser::RuleFunctionCallList;
}


std::any MxParser::FunctionCallListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitFunctionCallList(this);
  else
    return visitor->visitChildren(this);
}

MxParser::FunctionCallListContext* MxParser::functionCallList() {
  FunctionCallListContext *_localctx = _tracker.createInstance<FunctionCallListContext>(_ctx, getState());
  enterRule(_localctx, 10, MxParser::RuleFunctionCallList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(102);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(97);
        expression(0);
        setState(98);
        match(MxParser::Comma); 
      }
      setState(104);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(105);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDeclarationContext ------------------------------------------------------------------

MxParser::ClassDeclarationContext::ClassDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MxParser::ClassDeclarationContext::Class() {
  return getToken(MxParser::Class, 0);
}

MxParser::IdentifierContext* MxParser::ClassDeclarationContext::identifier() {
  return getRuleContext<MxParser::IdentifierContext>(0);
}

tree::TerminalNode* MxParser::ClassDeclarationContext::OpenBrace() {
  return getToken(MxParser::OpenBrace, 0);
}

tree::TerminalNode* MxParser::ClassDeclarationContext::CloseBrace() {
  return getToken(MxParser::CloseBrace, 0);
}

tree::TerminalNode* MxParser::ClassDeclarationContext::SemiColon() {
  return getToken(MxParser::SemiColon, 0);
}

std::vector<MxParser::ClassComponentsContext *> MxParser::ClassDeclarationContext::classComponents() {
  return getRuleContexts<MxParser::ClassComponentsContext>();
}

MxParser::ClassComponentsContext* MxParser::ClassDeclarationContext::classComponents(size_t i) {
  return getRuleContext<MxParser::ClassComponentsContext>(i);
}


size_t MxParser::ClassDeclarationContext::getRuleIndex() const {
  return MxParser::RuleClassDeclaration;
}


std::any MxParser::ClassDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitClassDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ClassDeclarationContext* MxParser::classDeclaration() {
  ClassDeclarationContext *_localctx = _tracker.createInstance<ClassDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, MxParser::RuleClassDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(MxParser::Class);
    setState(108);
    identifier();
    setState(109);
    match(MxParser::OpenBrace);
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 72065840375136256) != 0)) {
      setState(110);
      classComponents();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    match(MxParser::CloseBrace);
    setState(117);
    match(MxParser::SemiColon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassComponentsContext ------------------------------------------------------------------

MxParser::ClassComponentsContext::ClassComponentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::VariableDeclarationContext* MxParser::ClassComponentsContext::variableDeclaration() {
  return getRuleContext<MxParser::VariableDeclarationContext>(0);
}

MxParser::FunctionDeclarationContext* MxParser::ClassComponentsContext::functionDeclaration() {
  return getRuleContext<MxParser::FunctionDeclarationContext>(0);
}

MxParser::ConstructorDeclarationContext* MxParser::ClassComponentsContext::constructorDeclaration() {
  return getRuleContext<MxParser::ConstructorDeclarationContext>(0);
}


size_t MxParser::ClassComponentsContext::getRuleIndex() const {
  return MxParser::RuleClassComponents;
}


std::any MxParser::ClassComponentsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitClassComponents(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ClassComponentsContext* MxParser::classComponents() {
  ClassComponentsContext *_localctx = _tracker.createInstance<ClassComponentsContext>(_ctx, getState());
  enterRule(_localctx, 14, MxParser::RuleClassComponents);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(122);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(119);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(120);
      functionDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(121);
      constructorDeclaration();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstructorDeclarationContext ------------------------------------------------------------------

MxParser::ConstructorDeclarationContext::ConstructorDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::IdentifierContext* MxParser::ConstructorDeclarationContext::identifier() {
  return getRuleContext<MxParser::IdentifierContext>(0);
}

tree::TerminalNode* MxParser::ConstructorDeclarationContext::OpenParen() {
  return getToken(MxParser::OpenParen, 0);
}

tree::TerminalNode* MxParser::ConstructorDeclarationContext::CloseParen() {
  return getToken(MxParser::CloseParen, 0);
}

MxParser::SuiteStatementContext* MxParser::ConstructorDeclarationContext::suiteStatement() {
  return getRuleContext<MxParser::SuiteStatementContext>(0);
}


size_t MxParser::ConstructorDeclarationContext::getRuleIndex() const {
  return MxParser::RuleConstructorDeclaration;
}


std::any MxParser::ConstructorDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitConstructorDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MxParser::ConstructorDeclarationContext* MxParser::constructorDeclaration() {
  ConstructorDeclarationContext *_localctx = _tracker.createInstance<ConstructorDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 16, MxParser::RuleConstructorDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124);
    identifier();
    setState(125);
    match(MxParser::OpenParen);
    setState(126);
    match(MxParser::CloseParen);
    setState(127);
    antlrcpp::downCast<ConstructorDeclarationContext *>(_localctx)->body = suiteStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MxParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MxParser::VariableDeclarationContext* MxParser::StatementContext::variableDeclaration() {
  return getRuleContext<MxParser::VariableDeclarationContext>(0);
}

MxParser::ExpresionStatementContext* MxParser::StatementContext::expresionStatement() {
  return getRuleContext<MxParser::ExpresionStatementContext>(0);
}

MxParser::BranchStatementContext* MxParser::StatementContext::branchStatement() {
  return getRuleContext<MxParser::BranchStatementContext>(0);
}

MxParser::LoopStatementContext* MxParser::StatementContext::loopStatement() {
  return getRuleContext<MxParser::LoopStatementContext>(0);
}

MxParser::ControlFlowStatementContext* MxParser::StatementContext::controlFlowStatement() {
  return getRuleContext<MxParser::ControlFlowStatementContext>(0);
}

MxParser::SuiteStatementContext* MxParser::StatementContext::suiteStatement() {
  return getRuleContext<MxParser::SuiteStatementContext>(0);
}

MxParser::EmptyStatementContext* MxParser::StatementContext::emptyStatement() {
  return getRuleContext<MxParser::EmptyStatementContext>(0);
}


size_t MxParser::StatementContext::getRuleIndex() const {
  return MxParser::RuleStatement;
}


std::any MxParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MxParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

MxParser::StatementContext* MxParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 18, MxParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(136);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(129);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(130);
      expresionStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(131);
      branchStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(132);
      loopStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(133);
      controlFlowStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(134);
      suiteStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(135);
      emptyStatement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
